# Sable_CRM

./: .gitignore  Authorization.qml  CMakeLists.txt  ErrorMessage.qml  PushButton.qml  accessmanager.cpp  accessmanager.h  authservice.cpp  authservice.h  authviewmodel.cpp  authviewmodel.h  databasemanager.cpp  databasemanager.h  loginvalidator.cpp  loginvalidator.h  main.cpp  userrepository.cpp  userrepository.h
Repository/: clientsrepository.cpp  clientsrepository.h  dealsrepository.cpp  dealsrepository.h  sessionsrepository.cpp  sessionsrepository.h  tasksrepository.cpp  tasksrepository.h  userrepository.cpp  userrepository.h
View/: Authorization.qml  Theme.qml  Window.qml  WorkingArea.qml
View/Categories/: Employees.qml  Main.qml  Settings.qml
View/Categories/Instruments/: AddEmployee.qml  AddRole.qml
View/Components/: CheckButton.qml  ComboButton.qml  ErrorMessage.qml  LineEdit.qml  MenuBar.qml  Message.qml  PopupWindow.qml  PushButton.qml  RoleTag.qml  Table.qml  UserCard.qml
View/Structs/: Category.qml  Colors.qml  User.qml
resources/DB/: Script.sql
